# xiaopaiban

./: .gitignore  DONE.md  FINAL-SUMMARY.md  FLUTTER-BUILD-README.md  FLUTTER-MIGRATION-REPORT.md  LICENSE  MIGRATION-COMPLETE.md  MIGRATION-DONE.txt  MIGRATION-FINAL.txt  MIGRATION-REPORT.txt  MIGRATION-SUMMARY.txt  PROJECT-SUMMARY.md  README.md  Tauri2-Migration-Summary.md  VERSION-UPDATE-SUMMARY.md  build-mac-background.sh  build-pake.sh  build-tauri.sh  icon.icns  index.html  main.js  package-lock.json  package.json  pake.json  pb.html  start.sh  tauri-migration.md  test-migration.js  uni-app-x-migration-summary.md  vite.config.ts  构建失败分析与修复指南.md
.github/patches/: menu.rs
.github/scripts/: build-diagnostic.sh
.github/workflows/: build-on-push.yml  build.yml  flutter-build.yml
Images/: gt.js  layout.css  main.js
js/layui/: layui.js
js/layui/css/: layui.css
src/: App.vue  main.ts  manifest.json  pages.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/pages/index/: index.vue
src/store/: index.ts
src/types/: index.ts
src/utils/: index.ts
xiaopaiban_flutter/: LICENSE  README.md  pubspec.yaml
xiaopaiban_flutter/.github/workflows/: build.yml
xiaopaiban_flutter/lib/: app.dart  main.dart
xiaopaiban_flutter/lib/models/: app_settings.dart  clipboard_item.dart  history_item.dart  preset.dart  text_stats.dart
xiaopaiban_flutter/test/: widget_test.dart
xiaopaiban_flutter/windows/: installer.nsi
一键排版/: manifest.json
(+18 files in other folders)
